// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList renders a simple list 1`] = `
.c3 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 14px;
}

.c3:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c2[data-loading] {
  cursor: default;
}

.c2[aria-disabled],
.c2[data-inactive] {
  cursor: not-allowed;
}

.c2[aria-disabled] [data-component="ActionList.Checkbox"],
.c2[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c2[aria-disabled] [data-component="ActionList.Selection"],
.c2[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c2 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c2 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c2:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c2[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c2[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c2::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c2[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c2[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c7[data-loading] {
  cursor: default;
}

.c7[aria-disabled],
.c7[data-inactive] {
  cursor: not-allowed;
}

.c7[aria-disabled] [data-component="ActionList.Checkbox"],
.c7[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c7[aria-disabled] [data-component="ActionList.Selection"],
.c7[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c7 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c7 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c7:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c7[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c7[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c7[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c7[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c2:focus,
  .c2:focus-visible,
  .c2 > a.focus-visible,
  .c2[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c2:focus-visible,
  .c2 > a.focus-visible,
  .c2:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c2:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c7:focus,
  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c7:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        class="c1 c2"
      >
        <a
          aria-current="page"
          aria-labelledby=":r2:--label  "
          class="c3 Link"
          href="/"
          id=":r2:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c5"
              id=":r2:--label"
            >
              Home
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="c3 Link"
          href="/about"
          id=":r3:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r3:--label"
            >
              About
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r4:--label  "
          class="c3 Link"
          href="/contact"
          id=":r4:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r4:--label"
            >
              Contact
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList renders with groups 1`] = `
.c1 {
  height: 1px;
  background-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
  margin-top: calc(8px - 1px);
  margin-bottom: 8px;
  list-style: none;
}

.c1:first-child {
  display: none;
}

.c2:has([data-component="GroupHeadingWrap"] + ul > [data-component="GroupHeadingWrap"]) > [data-component="GroupHeadingWrap"] {
  display: none;
}

.c5 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 14px;
}

.c5:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-loading] {
  cursor: default;
}

.c4[aria-disabled],
.c4[data-inactive] {
  cursor: not-allowed;
}

.c4[aria-disabled] [data-component="ActionList.Checkbox"],
.c4[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c4[aria-disabled] [data-component="ActionList.Selection"],
.c4[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c4 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c4 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c4:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c4[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c4[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c4[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c9[data-loading] {
  cursor: default;
}

.c9[aria-disabled],
.c9[data-inactive] {
  cursor: not-allowed;
}

.c9[aria-disabled] [data-component="ActionList.Checkbox"],
.c9[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c9[aria-disabled] [data-component="ActionList.Selection"],
.c9[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c9 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c9 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c9:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c9:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c9[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c9:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c9[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c9[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c9[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c4:focus,
  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c4:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c9:focus,
  .c9:focus-visible,
  .c9 > a.focus-visible,
  .c9[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c9:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c9:focus-visible,
  .c9 > a.focus-visible,
  .c9:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c9:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2 Group"
      >
        <div
          class="GroupHeadingWrap"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="GroupHeading"
            data-component="ActionList.GroupHeading"
            id=":r7:"
          >
            Overview
          </h3>
        </div>
        <ul
          aria-labelledby=":r7:"
          class="GroupList"
        >
          <li
            class="c3 c4"
          >
            <a
              aria-current="page"
              aria-labelledby=":r8:--label  "
              class="c5 Link"
              href="/getting-started"
              id=":r8:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <div
                class="c6"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c7"
                  id=":r8:--label"
                >
                  Getting started
                </span>
                <span
                  class="c8"
                />
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2 Group"
      >
        <div
          class="GroupHeadingWrap"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="GroupHeading"
            data-component="ActionList.GroupHeading"
            id=":r9:"
          >
            Components
          </h3>
        </div>
        <ul
          aria-labelledby=":r9:"
          class="GroupList"
        >
          <li
            class="c3 c9"
          >
            <a
              aria-labelledby=":ra:--label  "
              class="c5 Link"
              href="/Avatar"
              id=":ra:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <div
                class="c6"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c10"
                  id=":ra:--label"
                >
                  Avatar
                </span>
                <span
                  class="c8"
                />
              </div>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav does not have active styles if SubNav contains the current item and is open 1`] = `
.c2 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c8 {
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  margin-left: 8px;
  font-weight: initial;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

[data-variant="danger"]:hover .c1,
[data-variant="danger"]:active .c8 {
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
}

.c10 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c13 {
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

.c13:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c11 {
  padding: 0;
  margin: 0;
  display: block;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c15:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c15[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c12[data-loading] {
  cursor: default;
}

.c12[aria-disabled],
.c12[data-inactive] {
  cursor: not-allowed;
}

.c12[aria-disabled] [data-component="ActionList.Checkbox"],
.c12[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c12[aria-disabled] [data-component="ActionList.Selection"],
.c12[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c12 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c12 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c12:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c12:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c12[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c12:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c12[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c12::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c12[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c12[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
}

.c4[data-loading] {
  cursor: default;
}

.c4[aria-disabled],
.c4[data-inactive] {
  cursor: not-allowed;
}

.c4[aria-disabled] [data-component="ActionList.Checkbox"],
.c4[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c4[aria-disabled] [data-component="ActionList.Selection"],
.c4[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c4 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c4 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c4:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c4[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c4[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c9 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c12:focus,
  .c12:focus-visible,
  .c12 > a.focus-visible,
  .c12[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c12:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c12:focus-visible,
  .c12 > a.focus-visible,
  .c12:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c12:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c4:focus,
  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c4:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r26:"
        class="c1 c2"
      >
        <button
          aria-controls=":r27:"
          aria-expanded="true"
          aria-labelledby=":r26:--label :r26:--trailing-visual "
          class="c3 c4"
          id=":r26:"
          tabindex="0"
        >
          <div
            class="c1 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c1 c6"
            >
              <span
                class="c1 c7"
                id=":r26:--label"
              >
                Item
              </span>
              <span
                class="c1 c8"
                id=":r26:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down c9"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="c1 c10"
            />
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r26:"
            class="c1 c11"
            id=":r27:"
          >
            <li
              class="c3 c12"
            >
              <a
                aria-current="page"
                aria-labelledby=":r29:--label  "
                class="c1 c13 Link"
                href="#"
                id=":r29:"
                style="--subitem-depth: 1;"
                tabindex="0"
              >
                <div
                  class="c1 c5"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c1 c14"
                    id=":r29:--label"
                  >
                    Sub Item
                  </span>
                  <span
                    class="c1 c10"
                  />
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav has active styles if SubNav contains the current item and is closed 1`] = `
.c2 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  margin-left: 8px;
  font-weight: initial;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

[data-variant="danger"]:hover .c1,
[data-variant="danger"]:active .c8 {
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
}

.c10 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c11 {
  padding: 0;
  margin: 0;
  display: none;
}

.c13 {
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

.c13:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c14:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c14[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c12[data-loading] {
  cursor: default;
}

.c12[aria-disabled],
.c12[data-inactive] {
  cursor: not-allowed;
}

.c12[aria-disabled] [data-component="ActionList.Checkbox"],
.c12[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c12[aria-disabled] [data-component="ActionList.Selection"],
.c12[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c12 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c12 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c12:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c12:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c12[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c12:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c12[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c12::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c12[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c12[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c15:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c15[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-loading] {
  cursor: default;
}

.c4[aria-disabled],
.c4[data-inactive] {
  cursor: not-allowed;
}

.c4[aria-disabled] [data-component="ActionList.Checkbox"],
.c4[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c4[aria-disabled] [data-component="ActionList.Selection"],
.c4[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c4 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c4 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c4:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c4[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c4[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c4[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c9 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c12:focus,
  .c12:focus-visible,
  .c12 > a.focus-visible,
  .c12[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c12:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c12:focus-visible,
  .c12 > a.focus-visible,
  .c12:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c12:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c4:focus,
  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c4:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r20:"
        class="c1 c2"
      >
        <button
          aria-controls=":r21:"
          aria-expanded="false"
          aria-labelledby=":r20:--label :r20:--trailing-visual "
          class="c3 c4"
          id=":r20:"
          tabindex="0"
        >
          <div
            class="c1 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c1 c6"
            >
              <span
                class="c1 c7"
                id=":r20:--label"
              >
                Item
              </span>
              <span
                class="c1 c8"
                id=":r20:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down c9"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="c1 c10"
            />
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r20:"
            class="c1 c11"
            id=":r21:"
          >
            <li
              class="c3 c12"
            >
              <a
                aria-current="page"
                aria-labelledby=":r23:--label  "
                class="c1 c13 Link"
                href="#"
                id=":r23:"
                style="--subitem-depth: 1;"
                tabindex="0"
              >
                <div
                  class="c1 c5"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c1 c7"
                    id=":r23:--label"
                  >
                    Sub Item
                  </span>
                  <span
                    class="c1 c10"
                  />
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;
